[package]
name = "rustsmith"
version = "0.1.0"
authors = ["David Pikas <david@pikas.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
arbitrary = "1.0"
syn = {"version" = "1.0", "features" = ["full", "extra-traits"]}
rustc-ap-rustc_ast = "720"
rustc-ap-rustc_ast_pretty = "720"
rustc-ap-rustc_span = "720"
rustc-ap-rustc_data_structures = "720"
scoped-tls = "1.0"
quote = "1.0"
rand = "0.8"
add_depth = { path = "add_depth" }
