[package]
name = "rustsmith"
version = "0.1.0"
authors = ["David Pikas <david@pikas.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
arbitrary = "1.0"
ctrlc = "3.1"
chrono = "0.4"
gag = "1"
syn = {"version" = "1.0", "features" = ["full", "extra-traits"]}
rustc-ap-rustc_ast = "723"
rustc-ap-rustc_parse = "723"
rustc-ap-rustc_session = "723"
rustc-ap-rustc_errors = "723"
rustc-ap-rustc_ast_pretty = "723"
rustc-ap-rustc_span = "723"
rustc-ap-rustc_data_structures = "723"
scoped-tls = "1.0"
quote = "1.0"
rand = "0.8"
lazy_static = "1.4"

# for profiling
[profile.release]
debug = true
